completed nav header, hero (main picture) section, newsline section

--- a/index.html
+++ b/index.html
@@ -10,13 +10,103 @@
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+
   <body>
+    <!-- HEADER SECTION -->
+    <section>
+    <div class="container">
+      <div class="row clearfix">
+        <div class="six columns">
+          <ul class="navLeft">
+            <li><a href="#"><img src="images/logos/tiy_logo.svg" alt="The Iron Yard Logo"></a></li>
+            <li><a href="#">Campuses</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Corporate Training</a></li>
+          </ul>
+        </div>
+        <div class="six columns">
+          <ul class="navRight">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><button><p>Apply Now</p></button></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- END OF HEADER SECTION -->
 
+  <!-- HERO SECTION -->
+  <section>
+  <div class="container">
+    <div class="row">
+      <div class="twelve columns heroText">
+        <h4>Where will your job take you?</h4>
+        <h6>Learn to code. Taking charge of your career</h6>
+        <button><p>Watch the video</p></button>
+      </div>
+    </div>
+  </div>
+  </section>
+  <!-- END OF HERO SECTION -->
 
+<!-- NEWS LOGO HEADLINE -->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="two columns">
+        <img src="images/logos/atlantic_logo.png">
+      </div>
+      <div class="two columns">
+        <img src="images/logos/fastcompany_logo.png">
+      </div>
+      <div class="two columns">
+        <img src="images/logos/cnn_logo.png">
+      </div>
+      <div class="two columns">
+        <img src="images/logos/techcrunch_logo.png">
+      </div>
+      <div class="two columns">
+        <img src="images/logos/abc_logo.png">
+      </div>
+      <div class="two columns">
+        <img src="images/logos/nbc_logo.png">
+      </div>
+      <!--End of Row  -->
+    </div>
+  </div>
+</section>
+<!-- END OF NEWS LOGO HEADLINE -->
 
+<!-- INFO SECTION -->
+<div class="container courseInfo">
+  <div class="row">
+    <div class="eight columns">
+      <h3>12-week code school</h3>
+      <p>Go from zero to job ready in an immersive environment. Learn the latest skills from industry professionals and connect with employers through our Career Support program.</p>
+      <h3>Free crash courses</h3>
+      <p>Our free, one-night crash courses are the perfect way to get your hands dirty with a fun project and gain the confidence to explore the world of programming.</p>
+      <h3>Corporate Training</h3>
+      <p>If you already lead or work on a development team, our recruiting, onboarding, reskilling and upskilling programs provide proven pathways to grow your team.</p>
+    </div>
+    <div class="four columns">
+      <form>
+        <p><strong>Short on time?</strong></p>
+        <p>Want a quick overview explaining what we're all about? We'll email you our 2017 fact sheet, complete with a snapshot of our locations, courses, job data and more. </p>
+        <label for="first_name">First Name</label>
+        <input type="text" id="first_name" name="user_first_name" />
+        <label for="last_name">Last Name</label>
+        <input type="text" id="last_name" name="user_last_name" />
+        <label for="email">Email Address</label>
+        <input type="text" id="email" name="user_email" />
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" name="user_phone" />
+        <button><p>Email me the fact sheet</p></button>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- END OF INFO SECTION -->
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
 </html>
