--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="twelve columns heroText">
-        <h4>Where will your job take you?</h4>
+        <h4>Where will your <br>job take you?</h4>
         <h6>Learn to code. Taking charge of your career</h6>
         <button><p>Watch the video</p></button>
       </div>
@@ -92,21 +92,54 @@
     </div>
     <div class="four columns">
       <form>
+        <div class="formWidth">
         <p><strong>Short on time?</strong></p>
         <p>Want a quick overview explaining what we're all about? We'll email you our 2017 fact sheet, complete with a snapshot of our locations, courses, job data and more. </p>
-        <label for="first_name">First Name</label>
-        <input type="text" id="first_name" name="user_first_name" />
-        <label for="last_name">Last Name</label>
-        <input type="text" id="last_name" name="user_last_name" />
-        <label for="email">Email Address</label>
-        <input type="text" id="email" name="user_email" />
-        <label for="phone">Phone Number</label>
-        <input type="text" id="phone" name="user_phone" />
+        <!-- <label for="fname">First Name</label> -->
+        <input type="text" id="fname" name="user_fname" placeholder="First Name" />
+        <!-- <label for="lname"></label> -->
+        <input type="text" id="lname" name="user_lname" placeholder="Last Name"/>
+        <!-- <label for="email"></label> -->
+        <input type="text" id="email" name="user_email" placeholder="Email Address"/>
+        <!-- <label for="phone">Phone Number</label> -->
+        <input type="number" id="phone" name="user_phone" placeholder="Phone Number" />
         <button><p>Email me the fact sheet</p></button>
+        </div>
       </form>
     </div>
   </div>
 </div>
 <!-- END OF INFO SECTION -->
+
+<!-- COURSES OFFERED-->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="twelve columns">
+        <h3>Discover our courses</h3>
+        <p>We offer learning programs that cover the core components of web development. Each course is designed to help people reach their learning and career goals.</p>
+      </div>
+    </div>
+    <div class="row courseIcons">
+      <div class="three columns">
+        <img src="images/icons/icon_frontend.png">
+        <p class="course frontEnd">Front-End Engineering</p>
+      </div>
+      <div class="three columns">
+        <img src="images/icons/icon_backend.png">
+        <p class="course backEnd">Back-End Engineering</p>
+      </div>
+      <div class="three columns">
+        <img src="images/icons/icon_mobile.png">
+        <p class="course mobile">Mobile Engineering</p>
+      </div>
+      <div class="three columns">
+        <img src="images/icons/icon_interface.png">
+        <p class="course interface">Interface Design </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- END OF COURSES OFFERED-->
 
 </html>
