Finished the layout of the Iron Yard Site, still need to condense and clean my code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- END OF HERO SECTION -->
 
 <!-- NEWS LOGO HEADLINE -->
-<section>
+<section class="newsline">
   <div class="container">
     <div class="row">
       <div class="two columns">
@@ -112,7 +112,7 @@
 <!-- END OF INFO SECTION -->
 
 <!-- COURSES OFFERED-->
-<section>
+<section class="courseOffered">
   <div class="container">
     <div class="row">
       <div class="twelve columns">
@@ -141,5 +141,180 @@
   </div>
 </section>
 <!-- END OF COURSES OFFERED-->
+<!-- WHAT OUR STUDENTS SAY-->
+<div class="container">
+  <div class="row students">
+    <div class="four columns">
+      <h5>What our students say</h5>
+      <h3>"The Iron Yard gave me confidence and set me on a career path I'm proud of."</h3><p class="quoteName">-Jesse Crow<span class="details">, UI Developer at IBM Design</span></p>
+      <button><p>See our students stories</p></button>
+    </div>
+    <div class="four columns">
+      <img src="images/kelly-rose-thumb.jpg" alt="Julie Rich Headshot"><p class="details">Ryan spent more than a decade in finance before realizing he wanted more. Today, he's found career happiness as an Interaction Engineer with Benefitfocus</p>
+      <p class="name">Ryan Huber</p>
+      <p class="jobDescription">Interaction Engineer</p>
+    </div>
+    <div class="four columns">
+      <img src="images/julie-rich-thumb.jpg" alt="Julie Rich Headshot"><p class="details">Ryan spent more than a decade in finance before realizing he wanted more. Today, he's found career happiness as an Interaction Engineer with Benefitfocus</p>
+      <p class="name">Ryan Huber</p>
+      <p class="jobDescription">Interaction Engineer</p>
+    </div>
+  </div>
+</div>
+<!-- END OF WHAT OUR STUDENTS SAY-->
 
+
+<!-- START OF EMPLOYERS SECTION-->
+<div class="employers">
+<div class="container">
+  <div class="row">
+    <div class="tweleve columns">
+      <h3>Employers</h3>
+      <p>We work with amazing companies around the world, connecting them with our graduates, training their developers and partnering with them to impact the communities around each of our campuses. </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="four columns">
+      <img src="images/logos/ibm_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/microsoft_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/github_logo.png">
+    </div>
+  </div>
+  <div class="row">
+    <div class="four columns">
+      <img src="images/logos/amazon_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/cocacola_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/att_logo.png">
+    </div>
+  </div>
+  <div class="row">
+    <div class="four columns">
+      <img src="images/logos/active_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/notredame_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/ally_logo.png">
+    </div>
+  </div>
+  <div class="row">
+    <div class="four columns">
+      <img src="images/logos/benefitfocus_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/sparc_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/boomtown_logo.png">
+    </div>
+  </div>
+  <div class="row">
+    <div class="four columns">
+      <img src="images/logos/validic_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/redhat_logo.png">
+    </div>
+    <div class="four columns">
+      <img src="images/logos/emcien_logo.png">
+    </div>
+  </div>
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/path_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/blueion_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/bronto_logo.png">
+      </div>
+    </div>
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/fuzzco_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/prismatic_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/spoonflower_logo.png">
+      </div>
+    </div>
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/blackbaud_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/chaione_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/poetic_logo.png">
+      </div>
+    </div>
+    <!-- END OF EMPLOYERS LOGOS -->
+    <div class="row">
+      <div class="twelve columns">
+        <button><p>Learn more about how we work with companies</p></button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END OF EMPLOYERS SECTION -->
+
+<!-- LETS TALK SECTION -->
+<div class="container">
+  <div class="row letsTalk">
+    <div class="six columns">
+      <h5>Questions?</h5>
+      <h3>Let's talk.</h3>
+      <p>Whether you're thinking about starting a new career, interested in learning more about our programs for individuals or businesses, or just want to chat, we're here and we'd love to connect with you. Shoot us an email or your phone number and we'll get back to you soon or you can chat with us right away using the chat icon below.</p>
+    </div>
+    <div class="three columns">
+      <form>
+        <div class="formWidth">
+        <p><strong>We'll call you</strong></p>
+        <p>Enter your phone number below and we'll give you a ring in the next few days.</p>
+        <!-- <label for="fname">First Name</label> -->
+        <input type="text" id="fname" name="user_fname" placeholder="First Name" />
+        <!-- <label for="lname"></label> -->
+        <input type="text" id="lname" name="user_lname" placeholder="Last Name"/>
+        <!-- <label for="phone">Phone Number</label> -->
+        <input type="number" id="phone" name="user_phone" placeholder="Phone Number" />
+        <button><p>Gimme a ring</p></button>
+        </div>
+      </form>
+    </div>
+    <div class="three columns">
+      <form>
+        <div class="formWidth">
+        <p><strong>We'll email you</strong></p>
+        <p>Enter your email below and we'll be in touch shortly. </p>
+        <!-- <label for="fname">First Name</label> -->
+        <input type="text" id="fname" name="user_fname" placeholder="First Name" />
+        <!-- <label for="lname"></label> -->
+        <input type="text" id="lname" name="user_lname" placeholder="Last Name"/>
+        <!-- <label for="email"></label> -->
+        <input type="text" id="email" name="user_email" placeholder="Email Address"/>
+        <button><p>Email me</p></button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- END OF LETS TALK SECTION -->
+
+<footer>
+</footer>
+
+</body>
 </html>
