--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="twelve columns heroText">
         <h4>Where will your <br>job take you?</h4>
         <h6>Learn to code. Taking charge of your career</h6>
-        <button><p>Watch the video</p></button>
+        <button><i class="fa fa-play-circle-o" aria-hidden="true"></i><p> Watch the video</p></button>
       </div>
     </div>
   </div>
@@ -141,13 +141,14 @@
   </div>
 </section>
 <!-- END OF COURSES OFFERED-->
+
 <!-- WHAT OUR STUDENTS SAY-->
 <div class="container">
   <div class="row students">
     <div class="four columns">
       <h5>What our students say</h5>
       <h3>"The Iron Yard gave me confidence and set me on a career path I'm proud of."</h3><p class="quoteName">-Jesse Crow<span class="details">, UI Developer at IBM Design</span></p>
-      <button><p>See our students stories</p></button>
+      <button><p>See our student stories</p></button>
     </div>
     <div class="four columns">
       <img src="images/kelly-rose-thumb.jpg" alt="Julie Rich Headshot"><p class="details">Ryan spent more than a decade in finance before realizing he wanted more. Today, he's found career happiness as an Interaction Engineer with Benefitfocus</p>
@@ -166,68 +167,68 @@
 
 <!-- START OF EMPLOYERS SECTION-->
 <div class="employers">
-<div class="container">
-  <div class="row">
-    <div class="tweleve columns">
-      <h3>Employers</h3>
-      <p>We work with amazing companies around the world, connecting them with our graduates, training their developers and partnering with them to impact the communities around each of our campuses. </p>
+  <div class="container">
+    <div class="row">
+      <div class="tweleve columns">
+        <h3>Employers</h3>
+        <p>We work with amazing companies around the world, connecting them with our graduates, training their developers and partnering with them to impact the communities around each of our campuses. </p>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="four columns">
-      <img src="images/logos/ibm_logo.png">
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/ibm_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/microsoft_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/github_logo.png">
+      </div>
     </div>
-    <div class="four columns">
-      <img src="images/logos/microsoft_logo.png">
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/amazon_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/cocacola_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/att_logo.png">
+      </div>
     </div>
-    <div class="four columns">
-      <img src="images/logos/github_logo.png">
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/active_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/notredame_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/ally_logo.png">
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="four columns">
-      <img src="images/logos/amazon_logo.png">
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/benefitfocus_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/sparc_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/boomtown_logo.png">
+      </div>
     </div>
-    <div class="four columns">
-      <img src="images/logos/cocacola_logo.png">
+    <div class="row">
+      <div class="four columns">
+        <img src="images/logos/validic_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/redhat_logo.png">
+      </div>
+      <div class="four columns">
+        <img src="images/logos/emcien_logo.png">
+      </div>
     </div>
-    <div class="four columns">
-      <img src="images/logos/att_logo.png">
-    </div>
-  </div>
-  <div class="row">
-    <div class="four columns">
-      <img src="images/logos/active_logo.png">
-    </div>
-    <div class="four columns">
-      <img src="images/logos/notredame_logo.png">
-    </div>
-    <div class="four columns">
-      <img src="images/logos/ally_logo.png">
-    </div>
-  </div>
-  <div class="row">
-    <div class="four columns">
-      <img src="images/logos/benefitfocus_logo.png">
-    </div>
-    <div class="four columns">
-      <img src="images/logos/sparc_logo.png">
-    </div>
-    <div class="four columns">
-      <img src="images/logos/boomtown_logo.png">
-    </div>
-  </div>
-  <div class="row">
-    <div class="four columns">
-      <img src="images/logos/validic_logo.png">
-    </div>
-    <div class="four columns">
-      <img src="images/logos/redhat_logo.png">
-    </div>
-    <div class="four columns">
-      <img src="images/logos/emcien_logo.png">
-    </div>
-  </div>
     <div class="row">
       <div class="four columns">
         <img src="images/logos/path_logo.png">
