Added Footer and Favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
   </head>
 
   <body>
@@ -18,7 +19,7 @@
       <div class="row clearfix">
         <div class="six columns">
           <ul class="navLeft">
-            <li><a href="#"><img src="images/logos/tiy_logo.svg" alt="The Iron Yard Logo"></a></li>
+            <li><img src="images/logos/tiy_logo.svg" alt="The Iron Yard Logo"></li>
             <li><a href="#">Campuses</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Corporate Training</a></li>
@@ -315,6 +316,49 @@
 <!-- END OF LETS TALK SECTION -->
 
 <footer>
+  <div class="container">
+    <div class="row clearfix">
+      <div class="two columns">
+        <ul>
+          <li><p>Courses</p></li>
+          <li><a href="#">Back-End Engineering</a></li>
+          <li><a href="#">Design</a></li>
+          <li><a href="#">Front-End Engineering</a></li>
+          <li><a href="#">Mobile Engineering</a></li>
+          <li><a href="#">Kids Classes</a></li>
+          <li><a href="#">Scholarships</a></li>
+          <li><a href="#">Tuition</a></li>
+          <li><a href="#">FAQs</a></li>
+        </ul>
+      </div>
+      <div class="two columns">
+        <ul>
+          <li><p>About</p></li>
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">History</a></li>
+          <li><a href="#">The Iron Yard Team</a></li>
+          <li><a href="#">Jobs at The Iron Yard</a></li>
+        </ul>
+      </div>
+      <div class="two columns">
+        <ul>
+          <li><a href="#">Corporate Training</a></li>
+          <li><a href="#">Stories</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press/News</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="six columns">
+        <div class="footerRight">
+          <img src="images/logos/tiy_logo.svg">
+          <p>&copy;2017 Iron Yard.All Rights Reserved</p>
+          <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+        </div>
+      </div>
+      <!-- End of row -->
+    </div>
+  </div>
 </footer>
 
 </body>
