Tried to add code to create animations in the top nav bar and on the hero image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row clearfix">
         <div class="six columns">
           <ul class="navLeft">
-            <li><img src="images/logos/tiy_logo.svg" alt="The Iron Yard Logo"></li>
+            <li><a href="theironyard.com"><img src="images/logos/tiy_logo.svg" alt="The Iron Yard Logo"></a></li>
             <li><a href="#">Campuses</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Corporate Training</a></li>
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="twelve columns heroText">
         <h4>Where will your <br>job take you?</h4>
-        <h6>Learn to code. Taking charge of your career</h6>
+        <h6><span class="typingEffect">Learn to code. Taking charge of your career</span></h6>
         <button><i class="fa fa-play-circle-o" aria-hidden="true"></i><p> Watch the video</p></button>
       </div>
     </div>
